templates/project_detail: add overflow visible utility and use it on project detail fixes #3365

--- a/meinberlin/assets/scss/utility.scss
+++ b/meinberlin/assets/scss/utility.scss
@@ -154,6 +154,10 @@
     overflow-wrap: break-word;
 }
 
+.u-overflow-visible {
+    overflow: visible;
+}
+
 .u-xs-down-display-none {
     @media screen and (max-width: $breakpoint-xs-down) {
         display: none !important;
